--- a/assets/style.css
+++ b/assets/style.css
@@ -1,60 +1,242 @@
-.tooltip, .arrow:after {
-  background: black;
-  border: 2px solid white;
+
+/*#fbt-tooltip {
+    max-width: 100%;
+    position: relative;
+    padding: 50px 30px;
+    margin: 0 auto;
+    border: 5px solid #EB4747;
+    text-align: center;
+    color: #333;
+    background: #fff;
+    -webkit-border-top-left-radius: 240px 140px;
+    -webkit-border-top-right-radius: 240px 140px;
+    -webkit-border-bottom-right-radius: 240px 140px;
+    -webkit-border-bottom-left-radius: 240px 140px;
+    -moz-border-radius: 240px / 140px;
+    border-radius: 240px / 140px;
 }
 
-.tooltip {
-  pointer-events: none;
-  opacity: 0;
-  display: inline-block;
-  position: absolute;
-  padding: 10px 20px;
-  color: white;
-  border-radius: 20px;
-  margin-top: 20px;
+#fbt-tooltip:before {
+    content: "";
+    position: absolute;
+    z-index: 10;
+    bottom: -30px;
+    right: 100px;
+    width: 40px;
+    height: 40px;
+    border: 5px solid #EB4747;
+    background: #fff;
+    -webkit-border-radius: 50px;
+    -moz-border-radius: 50px;
+    border-radius: 50px;
+    display: block;
+}
+
+#fbt-tooltip:after {
+    content: "";
+    position: absolute;
+    z-index: 10;
+    bottom: -60px;
+    right: 125px;
+    width: 25px;
+    height: 25px;
+    border: 5px solid #EB4747;
+    background: #fff;
+    -webkit-border-radius: 25px;
+    -moz-border-radius: 25px;
+    border-radius: 25px;
+    display: block;
+}*/
+
+
+#fbt-tooltip, .linkSlides, #floating-bubble-text, #fbt-image {
+  transition-property: all;
+  transition-timing-function: ease-in-out;
+  transition-duration: 0.2s
+}
+
+#fbt-image img {
+  max-width: 50%;
+}
+
+#fbt-tooltip {
+  position: relative;
+  /*border-radius: .4em;*/
+  padding: 30px;
+  max-width: 90%;
+  max-height: 100%;
   text-align: center;
-  font: bold 14px "Helvetica Neue", Sans-Serif;
-  font-stretch: condensed;
-  text-decoration: none;
-  text-transform: uppercase;
-  box-shadow: 0 0 7px black;
 }
-.arrow {
-  width: 70px;
-  height: 16px;
-  overflow: hidden;
+
+#fbt-tooltip:after {
+  content: '';
   position: absolute;
+}
+
+.top {
+  width: 300px;
+  margin: 0 auto;
+}
+
+.top:after {
+  bottom: 0;
   left: 50%;
-  margin-left: -35px;
-  bottom: -16px;
+  width: 0;
+  height: 0;
+  border: 28px solid transparent;
+  border-bottom: 0;
+  margin-left: -28px;
+  margin-bottom: -28px;
 }
-.arrow:after {
-  content: "";
+
+.top-right-tooltip:after {
+
+}
+.top-left-tooltip:after {
+
+}
+
+#fbt-tooltip.bubble {
+  padding: 20px;
+  max-width: 90%;
+  max-height: 100%;
+  text-align: center;
+}
+/*
+.right-tooltip:after {
+  left: 0;
+  top: 50%;
+  width: 0;
+  height: 0;
+  border: 28px solid transparent;
+  border-right-color: <?= $bubble_color ?>;
+  border-left: 0;
+  margin-top: -28px;
+  margin-left: -28px;
+}
+.left-tooltip:after {
+  right: 0;
+  top: 50%;
+  width: 0;
+  height: 0;
+  border: 28px solid transparent;
+  border-left-color: <?= $bubble_color ?>;
+  border-right: 0;
+  margin-top: -28px;
+  margin-right: -28px;
+}
+*/
+
+
+.bubble {
+  display: inline-block;
+  position: relative;
+  padding: 30px 40px;
+  border-radius: 10px;
+  border: 3px solid black;
+  background: white;
+  font-family: "Permanent Marker";
+  clear: both;
+}
+
+.bubble:before {
+  content: '';
   position: absolute;
-  left: 20px;
-  top: -20px;
-  width: 25px;
-  height: 25px;
-  -webkit-box-shadow: 6px 5px 9px -9px black,
-                      5px 6px 9px -9px black;
-  -moz-box-shadow: 6px 5px 9px -9px black,
-                   5px 6px 9px -9px black;
-  box-shadow: 6px 5px 9px -9px black,
-              5px 6px 9px -9px black;
-  -webkit-transform: rotate(45deg);
-  -moz-transform:    rotate(45deg);
-  -ms-transform:     rotate(45deg);
-  -o-transform:      rotate(45deg);
+  bottom: -50px;
+  height: 50px;
+  width: 90px;
 }
-.tooltip.active {
-  opacity: 1;
-  margin-top: 5px;
-  -webkit-transition: all 0.2s ease;
-  -moz-transition:    all 0.2s ease;
-  -ms-transition:     all 0.2s ease;
-  -o-transition:      all 0.2s ease;
+
+.bubble.left {
+  float: left;
+  /*margin: 10px 100px 60px 10px;*/
 }
-.tooltip.out {
-  opacity: 0;
-  margin-top: -20px;
+
+.bubble.left:before {
+  border-radius: 0 0 100%;
+  -webkit-box-shadow: -2px -2px 0 0 #000 inset, -23px 0 0 0 #fff inset, -25px -2px 0 0 #000 inset;
+          box-shadow: -2px -2px 0 0 #000 inset, -23px 0 0 0 #fff inset, -25px -2px 0 0 #000 inset;
+  left: 0;
+}
+
+.bubble.right {
+  float: right;
+  /*margin: 10px 10px 60px 100px;*/
+}
+
+.bubble.right:before {
+  border-radius: 0 0 0 100%;
+  -webkit-box-shadow: 2px -2px 0 0 #000 inset, 23px 0 0 0 #fff inset, 25px -2px 0 0 #000 inset;
+          box-shadow: 2px -2px 0 0 #000 inset, 23px 0 0 0 #fff inset, 25px -2px 0 0 #000 inset;
+  right: 0;
+}
+
+.bubble.think:before {
+  height: 3px;
+  width: 3px;
+  bottom: -20px;
+  border-radius: 100%;
+  background: #fff;
+}
+
+.bubble.think.left:before {
+  left: 50px;
+  -webkit-box-shadow: 0 0 0 7px white, 0 0 0 10px black, -20px 15px 0 5px white, -20px 15px 0 8px black, -40px 20px 0 2px white, -40px 20px 0 5px black;
+          box-shadow: 0 0 0 7px white, 0 0 0 10px black, -20px 15px 0 5px white, -20px 15px 0 8px black, -40px 20px 0 2px white, -40px 20px 0 5px black;
+}
+
+.bubble.think.right:before {
+  right: 50px;
+  -webkit-box-shadow: 0 0 0 7px white, 0 0 0 10px black, 20px 15px 0 5px white, 20px 15px 0 8px black, 40px 20px 0 2px white, 40px 20px 0 5px black;
+          box-shadow: 0 0 0 7px white, 0 0 0 10px black, 20px 15px 0 5px white, 20px 15px 0 8px black, 40px 20px 0 2px white, 40px 20px 0 5px black;
+}
+
+.bubble.yell:before {
+  height: 0px;
+  width: 0px;
+  bottom: -8px;
+  border-radius: 0;
+  background: #fff;
+}
+
+.bubble.yell:after {
+  content: '';
+  position: absolute;
+  bottom: -41px;
+  height: 20px;
+  width: 59px;
+}
+
+.bubble.yell.left:before {
+  -webkit-transform: skew(-45deg);
+          transform: skew(-45deg);
+  left: 50px;
+  -webkit-box-shadow: 0 -3px 0 5px white, 0 0 0 5px white, 0 8px 0 5px white, 8px 8px 0 5px white, 16px 8px 0 5px white, 24px 8px 0 5px white,   0 0 0 8px black, 0 8px 0 8px black, 8px 8px 0 8px black, 16px 8px 0 8px black, 24px 8px 0 8px black;
+          box-shadow: 0 -3px 0 5px white, 0 0 0 5px white, 0 8px 0 5px white, 8px 8px 0 5px white, 16px 8px 0 5px white, 24px 8px 0 5px white,   0 0 0 8px black, 0 8px 0 8px black, 8px 8px 0 8px black, 16px 8px 0 8px black, 24px 8px 0 8px black;
+}
+
+.bubble.yell.left:after {
+  border-radius: 0 0 60%;
+  -webkit-transform: skew(-45deg);
+          transform: skew(-45deg);
+  -webkit-box-shadow: -3px -2px 0 0 #000 inset, -14px 0 0 0 #fff inset, -17px -2px 0 0 #000 inset;
+          box-shadow: -3px -2px 0 0 #000 inset, -14px 0 0 0 #fff inset, -17px -2px 0 0 #000 inset;
+  left: 0;
+}
+
+.bubble.yell.right:before {
+  -webkit-transform: skew(45deg);
+          transform: skew(45deg);
+  right: 50px;
+  -webkit-box-shadow: 0 -3px 0 5px white, 0 0 0 5px white, 0 8px 0 5px white, -8px 8px 0 5px white, -16px 8px 0 5px white, -24px 8px 0 5px white,  0 0 0 8px black, 0 8px 0 8px black, -8px 8px 0 8px black, -16px 8px 0 8px black, -24px 8px 0 8px black;
+          box-shadow: 0 -3px 0 5px white, 0 0 0 5px white, 0 8px 0 5px white, -8px 8px 0 5px white, -16px 8px 0 5px white, -24px 8px 0 5px white,  0 0 0 8px black, 0 8px 0 8px black, -8px 8px 0 8px black, -16px 8px 0 8px black, -24px 8px 0 8px black;
+}
+
+.bubble.yell.right:after {
+  border-radius: 0 0 0 60%;
+  -webkit-transform: skew(45deg);
+          transform: skew(45deg);
+  -webkit-box-shadow: 3px -2px 0 0 #000 inset, 14px 0 0 0 #fff inset, 17px -2px 0 0 #000 inset;
+          box-shadow: 3px -2px 0 0 #000 inset, 14px 0 0 0 #fff inset, 17px -2px 0 0 #000 inset;
+  right: 0;
 }
