--- a/assets/style.css
+++ b/assets/style.css
@@ -55,6 +55,13 @@
   transition-duration: 0.2s
 }
 
+.fixed {
+  max-width: 100%;
+  position: fixed;
+  bottom: 0;
+  right: 0;
+}
+
 #fbt-image img {
   max-width: 50%;
 }
