--- a/assets/style.css
+++ b/assets/style.css
@@ -49,6 +49,14 @@
 }*/
 
 
+div.close_btn {
+  position: absolute;
+  top: 0;
+  right: 0;
+  margin-top: -20px;
+  cursor: pointer;
+}
+
 #fbt-tooltip, .linkSlides, #floating-bubble-text, #fbt-image {
   transition-property: all;
   transition-timing-function: ease-in-out;
@@ -136,13 +144,11 @@
 
 
 .bubble {
-  display: inline-block;
   position: relative;
   padding: 30px 40px;
   border-radius: 10px;
   border: 3px solid black;
   background: white;
-  font-family: "Permanent Marker";
   clear: both;
 }
 
